--- a/Clause Segmentation/spacy_split.ipynb
+++ b/Clause Segmentation/spacy_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,65 +353,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mOriginal:\u001b[0m The product could use a little work on the sound and comfort\n",
-      "['The product could use a little work on the sound', 'The product could use a little work on comfort']\n",
-      "\u001b[31mOriginal:\u001b[0m I ran to the bench while he ran to the closet\n",
-      "['I ran to the bench ', 'while he ran to the closet ']\n",
-      "\u001b[31mOriginal:\u001b[0m He loves and hates the mountains and the beach\n",
-      "['He loves the mountains', 'He loves the beach', 'He hates the mountains', 'He hates the beach']\n",
-      "\u001b[31mOriginal:\u001b[0m The big brown fox loves guitar but smashes every guitar he sees\n",
-      "['The big brown fox loves guitar ', 'The big brown fox smashes every guitar he sees ']\n",
-      "\u001b[31mOriginal:\u001b[0m Sally and Mr Smith both love ice cream, popsicles and cake \n",
-      "cream\n",
-      "['Sally and Mr Smith both love ice cream, popsicles and cake ']\n",
-      "\u001b[31mOriginal:\u001b[0m I love the product but not the price\n",
-      "['I love the product', 'I love not the price']\n",
-      "\u001b[31mOriginal:\u001b[0m I bought this product, which broke in two months, so I threw it away\n",
-      "[', so I threw it away ', 'I bought this product , which broke in two months ']\n",
-      "\u001b[31mOriginal:\u001b[0m I love this product's fit but not the color\n",
-      "[\"I love this product's fit\", 'I love not the color']\n",
-      "\u001b[31mOriginal:\u001b[0m The turtle won the race, and the rabbit lost his keys\n",
-      "['The turtle won the race , ', 'the rabbit lost his keys ']\n"
+      "\u001b[31mOriginal:\u001b[0m The product, which has very poor sound quality, often delivers me some electric shocks\n",
+      "The product , which has very poor sound quality , often delivers me some electric shocks \n"
      ]
     }
    ],
    "source": [
     "# More Complex Sentences\n",
     "if __name__ == \"__main__\":\n",
-    "    test_input = \"The product could use a little work on the sound and comfort\"\n",
+    "    # test_input = \"The product could use a little work on the sound and comfort\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"I ran to the bench while he ran to the closet\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"He loves and hates the mountains and the beach\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"The big brown fox loves guitar but smashes every guitar he sees\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"Sally and Mr Smith both love ice cream, popsicles and cake \"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"I love the product but not the price\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"I bought this product, which broke in two months, so I threw it away\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"I love this product's fit but not the color\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    # test_input = \"The turtle won the race, and the rabbit lost his keys\"\n",
+    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    # print(segment_sentences(test_input, False, False))\n",
+    "    test_input = \"The product, which has very poor sound quality, often delivers me some electric shocks\"\n",
     "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"I ran to the bench while he ran to the closet\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"He loves and hates the mountains and the beach\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"The big brown fox loves guitar but smashes every guitar he sees\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"Sally and Mr Smith both love ice cream, popsicles and cake \"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"I love the product but not the price\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"I bought this product, which broke in two months, so I threw it away\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"I love this product's fit but not the color\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))\n",
-    "    test_input = \"The turtle won the race, and the rabbit lost his keys\"\n",
-    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    print(segment_sentences(test_input, False, False))"
+    "    result = segment_sentences(test_input, False, False)\n",
+    "    for sen in result:\n",
+    "        print(sen)"
    ]
   }
  ],
