--- a/Segmentation/spacy_split.ipynb
+++ b/Segmentation/spacy_split.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[31mOriginal:\u001b[0m The product could use a little work on the sound and comfort\n",
+      "The product could use a little work on the sound\n",
+      "The product could use a little work on comfort\n",
+      "\u001b[31mOriginal:\u001b[0m I ran to the bench while he ran to the closet\n",
+      "I ran to the bench \n",
+      "while he ran to the closet \n",
+      "\u001b[31mOriginal:\u001b[0m He loves and hates the mountains and the beach\n",
+      "He loves the mountains\n",
+      "He loves the beach\n",
+      "He hates the mountains\n",
+      "He hates the beach\n",
+      "\u001b[31mOriginal:\u001b[0m The big brown fox loves guitar but smashes every guitar he sees\n",
+      "The big brown fox loves guitar \n",
+      "The big brown fox smashes every guitar he sees \n",
+      "\u001b[31mOriginal:\u001b[0m Sally and Mr Smith both love ice cream, popsicles and cake \n",
+      "cream\n",
+      "Sally and Mr Smith both love ice cream, popsicles and cake \n",
+      "\u001b[31mOriginal:\u001b[0m I love the product but not the price\n",
+      "I love the product\n",
+      "I love not the price\n",
+      "\u001b[31mOriginal:\u001b[0m I bought this product, which broke in two months, so I threw it away\n",
+      ", so I threw it away \n",
+      "I bought this product , which broke in two months \n",
+      "\u001b[31mOriginal:\u001b[0m I love this product's fit but not the color\n",
+      "I love this product's fit\n",
+      "I love not the color\n",
+      "\u001b[31mOriginal:\u001b[0m The turtle won the race, and the rabbit lost his keys\n",
+      "The turtle won the race , \n",
+      "the rabbit lost his keys \n",
       "\u001b[31mOriginal:\u001b[0m The product, which has very poor sound quality, often delivers me some electric shocks\n",
+      "The \t 0 \t DET \t det \t ['product', 'delivers'] \t []\n",
+      "product \t 1 \t NOUN \t nsubj \t ['delivers'] \t ['The', ',', 'has', ',']\n",
+      ", \t 2 \t PUNCT \t punct \t ['product', 'delivers'] \t []\n",
+      "which \t 3 \t PRON \t nsubj \t ['has', 'product', 'delivers'] \t []\n",
+      "has \t 4 \t VERB \t relcl \t ['product', 'delivers'] \t ['which', 'quality']\n",
+      "very \t 5 \t ADV \t advmod \t ['poor', 'quality', 'has', 'product', 'delivers'] \t []\n",
+      "poor \t 6 \t ADJ \t amod \t ['quality', 'has', 'product', 'delivers'] \t ['very']\n",
+      "sound \t 7 \t NOUN \t compound \t ['quality', 'has', 'product', 'delivers'] \t []\n",
+      "quality \t 8 \t NOUN \t dobj \t ['has', 'product', 'delivers'] \t ['poor', 'sound']\n",
+      ", \t 9 \t PUNCT \t punct \t ['product', 'delivers'] \t []\n",
+      "often \t 10 \t ADV \t advmod \t ['delivers'] \t []\n",
+      "delivers \t 11 \t VERB \t ROOT \t [] \t ['product', 'often', 'me', 'shocks']\n",
+      "me \t 12 \t PRON \t dative \t ['delivers'] \t []\n",
+      "some \t 13 \t DET \t det \t ['shocks', 'delivers'] \t []\n",
+      "electric \t 14 \t ADJ \t amod \t ['shocks', 'delivers'] \t []\n",
+      "shocks \t 15 \t NOUN \t dobj \t ['delivers'] \t ['some', 'electric']\n",
+      "Node summary: The [] False\n",
+      "Node summary: product ['The', ',', 'has', ','] False\n",
+      "Node summary: , [] False\n",
+      "Node summary: which [] False\n",
+      "Node summary: has ['which', 'quality'] False\n",
+      "Node summary: very [] False\n",
+      "Node summary: poor ['very'] False\n",
+      "Node summary: sound [] False\n",
+      "Node summary: quality ['poor', 'sound'] False\n",
+      "Node summary: , [] False\n",
+      "Node summary: often [] False\n",
+      "Node summary: delivers ['often', 'me', 'shocks'] False\n",
+      "Node summary: me [] False\n",
+      "Node summary: some [] False\n",
+      "Node summary: electric [] False\n",
+      "Node summary: shocks ['some', 'electric'] False\n",
       "The product , which has very poor sound quality , often delivers me some electric shocks \n"
      ]
     }
@@ -368,38 +429,46 @@
    "source": [
     "# More Complex Sentences\n",
     "if __name__ == \"__main__\":\n",
-    "    # test_input = \"The product could use a little work on the sound and comfort\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"I ran to the bench while he ran to the closet\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"He loves and hates the mountains and the beach\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"The big brown fox loves guitar but smashes every guitar he sees\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"Sally and Mr Smith both love ice cream, popsicles and cake \"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"I love the product but not the price\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"I bought this product, which broke in two months, so I threw it away\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"I love this product's fit but not the color\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
-    "    # test_input = \"The turtle won the race, and the rabbit lost his keys\"\n",
-    "    # print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    # print(segment_sentences(test_input, False, False))\n",
+    "    test_input = \"The product could use a little work on the sound and comfort\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"I ran to the bench while he ran to the closet\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"He loves and hates the mountains and the beach\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"The big brown fox loves guitar but smashes every guitar he sees\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"Sally and Mr Smith both love ice cream, popsicles and cake \"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"I love the product but not the price\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"I bought this product, which broke in two months, so I threw it away\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"I love this product's fit but not the color\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
+    "    test_input = \"The turtle won the race, and the rabbit lost his keys\"\n",
+    "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
+    "    for parsed_sentence in segment_sentences(test_input, False, False):\n",
+    "        print(parsed_sentence)\n",
     "    test_input = \"The product, which has very poor sound quality, often delivers me some electric shocks\"\n",
     "    print(\"\\033[31m\" + \"Original:\" + \"\\033[0m\", test_input)\n",
-    "    result = segment_sentences(test_input, False, False)\n",
-    "    for sen in result:\n",
-    "        print(sen)"
+    "    for parsed_sentence in segment_sentences(test_input, True, True):\n",
+    "        print(parsed_sentence)"
    ]
   }
  ],
