--- a/Sentiment/pure_sentiment.ipynb
+++ b/Sentiment/pure_sentiment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +251,24 @@
     "    save_strategy=\"epoch\",\n",
     "    load_best_model_at_end=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)"
    ]
   },
   {
@@ -667,14 +685,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dyang/miniconda3/envs/NLP_env3.8/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -699,21 +709,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 3.2639, -2.7294]], device='cuda:0')\n",
-      "Prediction: 0\n",
+      "\u001b[94mI love this product, but it needs serous work on its battery life\u001b[0m\n",
+      "tensor([[-2.9059,  2.2856]], device='cuda:0')\n",
+      "Sentiment: Positive\n",
+      "\u001b[94mThis product burned down my house\u001b[0m\n",
+      "tensor([[ 2.8578, -2.3358]], device='cuda:0')\n",
       "Sentiment: Negative\n"
      ]
     }
    ],
    "source": [
     "CUSTOM_INPUT = \"I love this product, but it needs serous work on its battery life\"\n",
+    "print(\"\\033[94m\" + CUSTOM_INPUT + \"\\033[0m\")\n",
     "tokenized_input = tokenizer(CUSTOM_INPUT, max_length=256, padding='max_length', truncation=True, return_tensors='pt')\n",
     "input_ids = tokenized_input['input_ids']\n",
     "attention_mask = tokenized_input['attention_mask']\n",
@@ -724,8 +738,21 @@
     "    print(logits)\n",
     "    prediction = logits.argmax(dim=1).item()\n",
     "\n",
-    "print('Prediction:', prediction)\n",
-    "print('Sentiment:', 'Positive' if prediction == 1 else 'Negative')\n"
+    "print('Sentiment:', 'Positive' if prediction == 1 else 'Negative')\n",
+    "\n",
+    "CUSTOM_INPUT = \"This product burned down my house\"\n",
+    "print(\"\\033[94m\" + CUSTOM_INPUT + \"\\033[0m\")\n",
+    "tokenized_input = tokenizer(CUSTOM_INPUT, max_length=256, padding='max_length', truncation=True, return_tensors='pt')\n",
+    "input_ids = tokenized_input['input_ids']\n",
+    "attention_mask = tokenized_input['attention_mask']\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(input_ids.to(device), attention_mask=attention_mask.to(device))\n",
+    "    logits = outputs.logits\n",
+    "    print(logits)\n",
+    "    prediction = logits.argmax(dim=1).item()\n",
+    "\n",
+    "print('Sentiment:', 'Positive' if prediction == 1 else 'Negative')"
    ]
   }
  ],
